k8s/monitoring/grafana-prometheus-loki/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: loki
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - grafana.kwetter.xyz
      secretName: kwetter-grafana-tls
  rules:
    - host: grafana.kwetter.xyz
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: loki-stack-grafana
                port:
                  number: 80
